[gd_scene load_steps=5 format=3 uid="uid://bnmcmtfl1jq8q"]

[ext_resource type="Script" path="res://GUI/end_game_gui.gd" id="1_brneb"]
[ext_resource type="AudioStream" uid="uid://kuu2ftwlhnk2" path="res://res/SFX/open_GUI.wav" id="4_2cnqb"]
[ext_resource type="AudioStream" uid="uid://csooiooxhwkj0" path="res://res/SFX/close_GUI.wav" id="5_55ssa"]
[ext_resource type="AudioStream" uid="uid://c16h1eu6d7ay2" path="res://res/SFX/button_pressed.wav" id="6_oj6ur"]

[node name="GameOverGUI" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("1_brneb")

[node name="WinnerScreen" type="PanelContainer" parent="."]
layout_mode = 0
offset_left = 80.0
offset_top = 80.0
offset_right = 496.0
offset_bottom = 667.0

[node name="MarginContainer" type="MarginContainer" parent="WinnerScreen"]
layout_mode = 2
theme_override_constants/margin_left = 12
theme_override_constants/margin_top = 12
theme_override_constants/margin_right = 12
theme_override_constants/margin_bottom = 12

[node name="VBoxContainer" type="VBoxContainer" parent="WinnerScreen/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="TitleSpacing" type="MarginContainer" parent="WinnerScreen/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_bottom = 12

[node name="Title" type="RichTextLabel" parent="WinnerScreen/MarginContainer/VBoxContainer/TitleSpacing"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
theme_type_variation = &"HeaderLarge"
bbcode_enabled = true
text = "[center]GEWONNEN[/center]"

[node name="TextBox2" type="PanelContainer" parent="WinnerScreen/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_type_variation = &"WhitePanelContainer"

[node name="Description" type="RichTextLabel" parent="WinnerScreen/MarginContainer/VBoxContainer/TextBox2"]
custom_minimum_size = Vector2(24, 60)
layout_mode = 2
text = "Du hast die Krise überstanden.
"
autowrap_mode = 2

[node name="TextBox3" type="PanelContainer" parent="WinnerScreen/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(376, 0)
layout_mode = 2
theme_type_variation = &"WhitePanelContainer"

[node name="ScrollContainer" type="ScrollContainer" parent="WinnerScreen/MarginContainer/VBoxContainer/TextBox3"]
custom_minimum_size = Vector2(376, 300)
layout_mode = 2

[node name="Actions" type="RichTextLabel" parent="WinnerScreen/MarginContainer/VBoxContainer/TextBox3/ScrollContainer"]
custom_minimum_size = Vector2(24, 300)
layout_mode = 2
text = "
"
autowrap_mode = 2

[node name="TextBox" type="PanelContainer" parent="WinnerScreen/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_type_variation = &"WhitePanelContainer"

[node name="Description" type="RichTextLabel" parent="WinnerScreen/MarginContainer/VBoxContainer/TextBox"]
custom_minimum_size = Vector2(24, 30)
layout_mode = 2
text = "
"
autowrap_mode = 2

[node name="MainMenu" type="Button" parent="WinnerScreen/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Zurück zur Hauptmenu"

[node name="LoserScreen" type="PanelContainer" parent="."]
layout_mode = 0
offset_left = 80.0
offset_top = 80.0
offset_right = 496.0
offset_bottom = 667.0
metadata/_edit_use_anchors_ = true

[node name="MarginContainer" type="MarginContainer" parent="LoserScreen"]
layout_mode = 2
theme_override_constants/margin_left = 12
theme_override_constants/margin_top = 12
theme_override_constants/margin_right = 12
theme_override_constants/margin_bottom = 12

[node name="VBoxContainer" type="VBoxContainer" parent="LoserScreen/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="TitleSpacing" type="MarginContainer" parent="LoserScreen/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_bottom = 12

[node name="Title" type="RichTextLabel" parent="LoserScreen/MarginContainer/VBoxContainer/TitleSpacing"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
theme_type_variation = &"HeaderLarge"
bbcode_enabled = true
text = "[center]VERLOREN[/center]"

[node name="TextBox" type="PanelContainer" parent="LoserScreen/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_type_variation = &"WhitePanelContainer"

[node name="Description" type="RichTextLabel" parent="LoserScreen/MarginContainer/VBoxContainer/TextBox"]
custom_minimum_size = Vector2(24, 60)
layout_mode = 2
text = "Du hast die Krise nicht überstanden."
autowrap_mode = 2

[node name="TextBox3" type="PanelContainer" parent="LoserScreen/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(376, 0)
layout_mode = 2
theme_type_variation = &"WhitePanelContainer"

[node name="ScrollContainer" type="ScrollContainer" parent="LoserScreen/MarginContainer/VBoxContainer/TextBox3"]
custom_minimum_size = Vector2(376, 300)
layout_mode = 2

[node name="Actions" type="RichTextLabel" parent="LoserScreen/MarginContainer/VBoxContainer/TextBox3/ScrollContainer"]
custom_minimum_size = Vector2(24, 300)
layout_mode = 2
text = "
"
fit_content = true
autowrap_mode = 2

[node name="TextBox2" type="PanelContainer" parent="LoserScreen/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_type_variation = &"WhitePanelContainer"

[node name="Description" type="RichTextLabel" parent="LoserScreen/MarginContainer/VBoxContainer/TextBox2"]
custom_minimum_size = Vector2(24, 30)
layout_mode = 2
text = "Du hast 10 ECoins erworben!
"
autowrap_mode = 2

[node name="MainMenu" type="Button" parent="LoserScreen/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
text = "Zurück zum Hauptmenü"

[node name="SFX" type="Node" parent="."]

[node name="OpenGUISFX" type="AudioStreamPlayer" parent="SFX"]
stream = ExtResource("4_2cnqb")

[node name="CloseGUISFX" type="AudioStreamPlayer" parent="SFX"]
stream = ExtResource("5_55ssa")

[node name="ButtonSFX" type="AudioStreamPlayer" parent="SFX"]
stream = ExtResource("6_oj6ur")

[connection signal="pressed" from="WinnerScreen/MarginContainer/VBoxContainer/MainMenu" to="." method="_on_main_menu_pressed"]
[connection signal="pressed" from="LoserScreen/MarginContainer/VBoxContainer/MainMenu" to="." method="_on_main_menu_pressed"]
